# WADsworth

./: CMakeLists.txt  StyleGuide.txt
cmake/: sdl3-config.cmake
include/: Algorithm.h  Annotation.h  C.h  Directory.h  Error.h  Files.h  Header.h  IO.h  Math.h  Memory.h  Metaprogramming.h  Types.h  WAD.h  WADStr.h
runtime/: CMakeLists.txt
runtime/src/: Main.c
src/: Algorithm.c  Error.c  Files.c  Main.c  Math.c  Memory.c  WADStr.c
test/: CMakeLists.txt  TAlgorithms.c  TEndianness.c  TFiles.c  TMain.c  TWWLocale.c  TWWMath.c
tweenylib/: CMakeLists.txt
tweenylib/include/: Algorithms.h  Annotations.h  C.h  Endianness.h  Errors.h  Files.h  Memory.h  Types.h  WAD.h  WADDirectory.h  WADHeader.h  WADStr.h  WWLocale.h  WWMath.h
tweenylib/src/: Algorithms.c  Endianness.c  Errors.c  Files.c  Memory.c  WAD.c  WADStr.c  WWLocale.c  WWMath.c
